# verity

./: .actrc  .firebaserc  .gitignore  .mise.toml  CLAUDE.md  Makefile  README.md  docker-compose.yml  firebase.json  hk.pkl  openapi.yaml
.github/: CODEOWNERS
backend/: .env.example  .gitignore  .mise.toml  Dockerfile  Makefile  alembic.ini  hk.pkl  main.py  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 040b5add8cf3_add_transcript_and_transcript_segment_.py  0d943958dede_add_audio_recordings_table.py  13d3783fcbd0_add_users_table.py  51d3bd529d66_add_interview_guides_table.py  6404421f3ab8_add_unique_constraint_to_organization_.py  7055d100bd4c_add_organizations_and_studies_tables.py  a06b0f827cdf_update_interviews_table_for_self_led_.py  bbb78d9096e9_add_self_led_interview_fields_to_study_.py  bc699b4012a3_add_display_name_description_and_soft_.py  c2ba6cce71ba_add_interviews_table.py  cf2cb0df0936_add_composite_indexes_for_interview_.py
backend/docs/: test-isolation.md
backend/scripts/: firebase_auth_stub.py  llm_stub.py  seed_firebase.py  start_e2e_backend.sh
backend/src/: auth.py  database.py  database_utils.py  llm_service.py  models.py  schemas.py  storage.py
backend/src/api/: main.py
backend/src/api/services/: __init__.py  gcs_service.py
backend/tests/: conftest.py  test_helpers.py
backend/tests/features/: audio_upload.feature  auth_and_roles.feature  create_organization.feature  create_study.feature  cross_organization_security.feature  health_check.feature  interview_access.feature  interview_completion.feature  interview_data_api.feature  interview_management.feature  interviewee_isolation.feature  organization_access.feature  organization_users.feature  researcher_interview_list.feature  study_guides.feature  study_management.feature  study_settings.feature  super_admin_god_mode.feature  transcript_finalization.feature
backend/tests/step_defs/: test_audio_upload.py  test_auth_and_roles.py  test_create_organization.py  test_cross_organization_security.py  test_health_check.py  test_interview_access.py  test_interview_completion.py  test_interview_data_api.py  test_interview_management.py  test_interviewee_isolation.py  test_organization_access.py  test_organization_users.py  test_researcher_interview_list.py  test_study_guides.py  test_study_management.py  test_study_settings.py  test_super_admin_god_mode.py  test_transcript_finalization.py
frontend/: .env.sample  .gitignore  .mise.toml  Makefile  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
infra/: .gitignore  .mise.toml  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  QUICKSTART.md  README.md  __main__.py  pyproject.toml  requirements.txt
postman/: README.md  dev.postman_environment.json  (+2 more)
scripts/: setup-gcp.sh  (+4 more)
(+79 files in other folders)
